fix: overflowing page

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a {
 body {
   font-family: DM Sans;
   font-size: 1.6rem;
+  overflow-x: hidden;
 }
 
 header {
